[package]
name = "revap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"

tracing = "0.1.29"
tracing-futures = { version = "0.2.5" }
tracing-subscriber = "0.3.2"

tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["compat"] }
tokio-signal = "0.2.9" 
async-trait = "0.1.51"
rustls = { version = "0.20.0", features = ["dangerous_configuration"] }
tokio-rustls = { git = "https://github.com/tokio-rs/tls", branch = "master" }
rustls-pemfile = "0.2.1"
bytes = "1.1.0"
id-pool = { git = "https://github.com/nigma143/id-pool", default-features = false, features = ["u32"] }

yaml-rust = "0.4"